crates/toml_edit/tests/snapshots/invalid/datetime/second-trailing-dotz.stderr
TOML parse error at line 1, column 26
  |
1 | foo = 2016-09-09T09:09:09.Z
  |                          ^
expected newline, `#`
